package com.directi.training.isp.exercise_refactored;

public interface IDoor
{
    void lock();

    void unlock();

    void open();

    void close();

   

    
}
