package com.directi.training.isp.exercise_refactored;

public interface ISensorDoor {
    void proximityCallback();
}
