package com.directi.training.isp.exercise_refactored;

public interface ITimerDoor {
    void timeOutCallback();
}
